# jkkplayer

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/opoojkk/jkkplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/opoojkk/jkkplayer/: MainActivity.kt  PlayerApp.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle.kts
player/src/androidTest/java/com/opoojkk/jkkplayer/: ExampleInstrumentedTest.kt
player/src/main/cpp/: CMakeLists.txt  VLog.cpp  ffmpeg_jni.cpp
player/src/main/cpp/include/log/: VLog.h
player/src/main/java/com/opoojkk/jkkplayer/: FFmpegNative.kt
player/src/test/java/com/opoojkk/jkkplayer/: ExampleUnitTest.kt
